# Simple-YOLOv5-ROS

./: CMakeLists.txt  package.xml
launch/: test_detect.launch
msg/: Objects.msg  Yolo_Objects.msg
src/: ros_detect.py
